added boxes section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbar-collapse">
+        <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a href="#home" class="nav-link">HOME</a>
@@ -66,6 +66,85 @@
                 alt=""
                 class="img-fluid d-none d-lg-block"
               />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- NEWSLETTER -->
+    <section id="newsletter" class="bg-dark text-white py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <input
+              type="text"
+              placeholder="Enter Name"
+              class="form-control form-control-lg mb-resp"
+            />
+          </div>
+          <div class="col-md-4">
+            <input
+              type="email"
+              placeholder="Enter Email"
+              class="form-control form-control-lg mb-resp"
+            />
+          </div>
+          <div class="col-md-4">
+            <button class="btn btn-primary btn-lg btn-block">
+              <i class="fas fa-envelope-open-o"></i>Subscribe
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- BOXES -->
+    <section id="boxes" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card text-center border-primary mb-resp">
+              <div class="card-body">
+                <h3 class="text-primary">BE BETTER</h3>
+                <p class="text-muted">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo,
+                  sint?
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center bg-primary text-white mb-resp">
+              <div class="card-body">
+                <h3>BE SMARTER</h3>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo,
+                  sint?
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center border-primary mb-resp">
+              <div class="card-body">
+                <h3 class="text-primary">BE FASTER</h3>
+                <p class="text-muted">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo,
+                  sint?
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card text-center bg-primary text-white">
+              <div class="card-body">
+                <h3>BE STRONGER</h3>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo,
+                  sint?
+                </p>
+              </div>
             </div>
           </div>
         </div>
