--- a/index.html
+++ b/index.html
@@ -151,6 +151,105 @@
       </div>
     </section>
 
+    <!-- ABOUT / WHY SECTION -->
+    <section id="about" class="py-5 text-center bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="info-header mb-5">
+              <h1 class="text-primary pb-3">WHY THIS BOOK?</h1>
+              <p class="lead pb-3">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Repellendus, optio adipisci hic atque sint rem?
+              </p>
+            </div>
+
+            <!-- ACCORDIAN -->
+            <div id="accordian">
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse1"
+                      data-toggle="collapse"
+                      data-parent="#accordian"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Get Inspired
+                    </div>
+                  </h5>
+                </div>
+
+                <div id="collapse1" class="collapse show">
+                  <div class="card-body">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Sapiente dolores, officiis molestiae unde, magnam nisi qui,
+                    ad inventore et enim saepe voluptate? Optio numquam
+                    recusandae tenetur accusamus est, ratione repellat
+                    distinctio ex molestiae quibusdam fuga quod itaque a vitae
+                    minus praesentium. Saepe quaerat veniam ratione sequi earum,
+                    nam odit aperiam.
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse2"
+                      data-toggle="collapse"
+                      data-parent="#accordian"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Gain the
+                      Knowledge
+                    </div>
+                  </h5>
+                </div>
+
+                <div id="collapse2" class="collapse">
+                  <div class="card-body">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Sapiente dolores, officiis molestiae unde, magnam nisi qui,
+                    ad inventore et enim saepe voluptate? Optio numquam
+                    recusandae tenetur accusamus est, ratione repellat
+                    distinctio ex molestiae quibusdam fuga quod itaque a vitae
+                    minus praesentium. Saepe quaerat veniam ratione sequi earum,
+                    nam odit aperiam.
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse3"
+                      data-toggle="collapse"
+                      data-parent="#accordian"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Open Your Mind
+                    </div>
+                  </h5>
+                </div>
+
+                <div id="collapse3" class="collapse">
+                  <div class="card-body">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Sapiente dolores, officiis molestiae unde, magnam nisi qui,
+                    ad inventore et enim saepe voluptate? Optio numquam
+                    recusandae tenetur accusamus est, ratione repellat
+                    distinctio ex molestiae quibusdam fuga quod itaque a vitae
+                    minus praesentium. Saepe quaerat veniam ratione sequi earum,
+                    nam odit aperiam.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
